dimagi-SalesforceFB/src/objects/PRO_Email_Remindar_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Error_Email__c</fullName>
        <description>Holds the email addresses to shoot an email when any error occurs in batch job.</description>
        <inlineHelpText>Enter email addresses &quot;,&quot; seperated</inlineHelpText>
        <label>Error Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Nag_Days__c</fullName>
        <label>First Nag Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fourth_Nag_Days__c</fullName>
        <label>Fourth Nag Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Services_Backstop__c</fullName>
        <description>Note, the update of this field will not change the existing relationship between the contract and a contact</description>
        <label>Global Services Backstop</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Management_Team_Email__c</fullName>
        <label>Management Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Nag_Days__c</fullName>
        <label>Second Nag Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snooze_Page_URL__c</fullName>
        <label>Snooze Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Third_Nag_Days__c</fullName>
        <label>Third Nag Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PRO Email Reminder Settings</label>
</CustomObject>